--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       - .docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./application:/var/www/html
     labels:
-      - "traefik.frontend.rule=Host:web.default.localhost"
+      - "traefik.frontend.rule=Host:web.default.${HOST}"
       - "traefik.backend=nginx"
     networks:
       - default
