--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,11 +29,11 @@ services:
       - default
 
   traefik:
-    image: traefik # The official Traefik docker image
+    image: traefik
     command: --api --docker
     ports:
-      - "8080:8080" # The Web UI (enabled by --api)
-      - "80:80" # The HTTP port
+      - "8080:8080"
+      - "80:80"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
