--- a/application/composer.json
+++ b/application/composer.json
@@ -17,7 +17,8 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/yaml": "^4.1",
-        "webonyx/graphql-php": "^0.12.4"
+        "webonyx/graphql-php": "^0.12.4",
+        "willdurand/faker-bundle": "^1.4"
     },
     "require-dev": {
         "symfony/dotenv": "^4.1",
