--- a/application/composer.json
+++ b/application/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
+        "fzaninotto/faker": "^1.8",
         "jms/serializer": "^1.13",
         "jms/serializer-bundle": "^2.4",
         "sensio/framework-extra-bundle": "^5.2",
@@ -21,6 +22,7 @@
         "willdurand/faker-bundle": "^1.4"
     },
     "require-dev": {
+        "nelmio/alice": "^3.4",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5"
     },
