--- a/application/composer.json
+++ b/application/composer.json
@@ -18,10 +18,10 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/yaml": "^4.1",
-        "webonyx/graphql-php": "^0.12.4",
-        "willdurand/faker-bundle": "^1.4"
+        "webonyx/graphql-php": "^0.12.4"
     },
     "require-dev": {
+        "doctrine/data-fixtures": "^1.3",
         "nelmio/alice": "^3.4",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5"
