--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,6 +77,56 @@ services:
     networks:
       - default
 
+  zoo_node_1:
+    image: zookeeper
+    container_name: zoo_node_1
+    restart: always
+    ports:
+      - 2181
+    environment:
+      ZOO_MY_ID: 1
+      ZOO_SERVERS: server.1=zoo_node_1:2888:3888 server.2=zoo_node_2:2888:3888 server.3=zoo_node_3:2888:3888
+    networks:
+      - bigdata
+
+  zoo_node_2:
+    image: zookeeper
+    container_name: zoo_node_2
+    restart: always
+    ports:
+      - 2181
+    environment:
+      ZOO_MY_ID: 2
+      ZOO_SERVERS: server.1=zoo_node_1:2888:3888 server.2=zoo_node_2:2888:3888 server.3=zoo_node_3:2888:3888
+    networks:
+      - bigdata
+
+  zoo_node_3:
+    image: zookeeper
+    container_name: zoo_node_3
+    restart: always
+    ports:
+      - 2181
+    environment:
+      ZOO_MY_ID: 3
+      ZOO_SERVERS: server.1=zoo_node_1:2888:3888 server.2=zoo_node_2:2888:3888 server.3=zoo_node_3:2888:3888
+    networks:
+      - bigdata
+
+  nifi:
+    image: xemuliam/nifi
+    container_name: nifi
+    environment:
+      IS_CLUSTER_NODE: 1
+      ZK_NODES_LIST: 'zoo_node_1,zoo_node_2,zoo_node_3'
+    volumes:
+      - ./etc/nifi/conf:/opt/nifi/conf
+    labels:
+      - "traefik.frontend.rule=Host:nifi.default.localhost"
+      - "traefik.port=8080"
+    networks:
+      - bigdata
+
 volumes:
   sylius:
     driver_opts:
