--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,10 +15,14 @@ services:
     networks:
       - default
     working_dir: /var/www/html
-    resources:
+    deploy:
+      resources:
         limits:
-            cpus: '2'
-                memory: 512M
+          cpus: '2'
+          memory: 512M
+        reservations:
+          cpus: '2'
+          memory: 512M
   
   nginx:
     image: nginx:latest
@@ -31,10 +35,14 @@ services:
       - "traefik.backend=nginx"
     networks:
       - default
-    resources:
+    deploy:
+      resources:
         limits:
-            cpus: '2'
-                memory: 512M
+          cpus: '2'
+          memory: 512M
+        reservations:
+          cpus: '2'
+          memory: 512M
 
   traefik:
     image: traefik
