--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,8 +18,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2'
-          memory: 512M
+          cpus: '4'
+          memory: 1024M
         reservations:
           cpus: '2'
           memory: 512M
@@ -38,8 +38,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2'
-          memory: 512M
+          cpus: '4'
+          memory: 1024M
         reservations:
           cpus: '2'
           memory: 512M
@@ -75,6 +75,14 @@ services:
       - ./var/lib/postgresql/data:/var/lib/postgresql/data
     networks:
       - default
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 1024M
+        reservations:
+          cpus: '2'
+          memory: 512M
 
   node:
     image: node:8
@@ -141,6 +149,14 @@ services:
       - "9090:8080"
     networks:
       - default
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 4096M
+        reservations:
+          cpus: '2'
+          memory: 512M
 
 volumes:
   sylius:
