--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3.5'
 
 services:
   php:
-    build: .docker/php
+#    build: .docker/php
+    image: newdocker_php:latest
     volumes: 
       - ./application:/var/www/html
     environment:
